--- a/package.json
+++ b/package.json
@@ -6,21 +6,23 @@
     "build": "webpack --mode production",
     "dev": "webpack serve --mode development"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/imonweb/JS21.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/imonweb/JS21/issues"
-  },
   "homepage": "https://github.com/imonweb/JS21#readme",
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "css-loader": "^5.2.0",
+    "file-loader": "^6.2.0",
+    "font-awesome-loader": "^1.0.2",
+    "image-webpack-loader": "^7.0.1",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "materialize-css": "^1.0.0"
   }
 }
