--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "font-awesome-loader": "^1.0.2",
     "html-webpack-plugin": "^5.3.1",
     "image-webpack-loader": "^7.0.1",
+    "mini-css-extract-plugin": "^1.4.1",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.30.0",
