--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "css-loader": "^5.2.0",
+    "file-loader": "^6.2.0",
     "font-awesome-loader": "^1.0.2",
     "html-webpack-plugin": "^5.3.1",
     "image-webpack-loader": "^7.0.1",
